--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "dashboard",
   "private": true,
@@ -16,6 +17,8 @@
     "@mui/material": "^5.13.6",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
+    "formik": "2.1.3",
+    "yup": "0.27.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.15.0",
