--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "dashboard",
   "private": true,
@@ -18,14 +17,16 @@
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "formik": "2.1.3",
-    "yup": "0.27.0",
+    "material-react-table": "^1.14.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "yup": "0.27.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
