--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@syncfusion/ej2-react-calendars": "^22.1.36",
+    "@syncfusion/ej2-react-grids": "^22.1.37",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "react": "^18.2.0",
