--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@syncfusion/ej2-react-grids": "^22.1.37",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
+    "formik": "2.1.3",
+    "react-chartjs-2": "^5.2.0",
     "react": "^18.2.0",
+    "yup": "0.27.0",
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.15.0",
+    "material-react-table": "^1.14.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
