--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "chart.js": "^4.3.0",
     "formik": "2.1.3",
     "material-react-table": "^1.14.0",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "recharts": "^2.7.2",
