--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.3.0",
     "formik": "2.1.3",
     "material-react-table": "^1.14.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
