--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@syncfusion/ej2-base": "*",
+    "@syncfusion/ej2-react-base": "*",
     "@syncfusion/ej2-react-calendars": "^22.1.36",
     "@syncfusion/ej2-react-grids": "^22.1.37",
+    "@syncfusion/ej2-react-schedule": "^22.1.36",
+    "@syncfusion/ej2-schedule": "*",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.4.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "formik": "2.1.3",
     "material-react-table": "^1.14.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
@@ -29,11 +36,12 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "recharts": "^2.7.2",
+    "typescript": "^5.1.6",
     "yup": "0.27.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
